#168 Allow to configure Storage class at ActiveMQArtemis CR level This work is based on Rohan Mars (rohanmars) original work. https://github.com/artemiscloud/activemq-artemis-operator/pull/44

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -866,6 +866,9 @@ spec:
                     properties:
                       size:
                         type: string
+                      storageClassName:
+                        description: The storageClassName to be used in PVC
+                        type: string
                     type: object
                   tolerations:
                     items:
