Added ENABLE_WEBHOOKS environment variable with default value false.

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -73,6 +73,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.7
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2200
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.9
+        - name: ENABLE_WEBHOOKS
+          value: "false"
         image: controller:latest
         # imagePullPolicy: Always
         name: manager
