#153 Broker created by OpenShift operator does not support "oc port-forward"     Added a bindToAllInterfaces option for acceptors. The acceptor will     bind to 0.0.0.0 if this option is set to true.

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -46,6 +46,10 @@ spec:
                     anycastPrefix:
                       description: To indicate which kind of routing type to use.
                       type: string
+                    bindToAllInterfaces:
+                      description: Whether to let the acceptor to bind to all interfaces
+                        (0.0.0.0)
+                      type: boolean
                     connectionsAllowed:
                       description: Max number of connections allowed to make
                       type: integer
