#183  cluster-wide scaledown problem: extra permissions needed and log panic - added missing permissions for doing scaledown cluster wide - added eventLog function to drainer controller to handle the event log instead of using log.Info() which requires keys to always be string type

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -16,6 +16,7 @@ rules:
   - pods
   - routes
   - secrets
+  - serviceaccounts
   - services
   verbs:
   - '*'
@@ -168,6 +169,15 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - rolebindings
+  - roles
+  verbs:
+  - create
+  - delete
+  - get
 - apiGroups:
   - route.openshift.io
   resources:
