--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,13 +8,13 @@ resources:
 - bases/broker.amq.io_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+#patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_activemqartemises.yaml
-- patches/webhook_in_activemqartemisaddresses.yaml
-- patches/webhook_in_activemqartemisscaledowns.yaml
-- patches/webhook_in_activemqartemissecurities.yaml
+#- patches/webhook_in_activemqartemises.yaml
+#- patches/webhook_in_activemqartemisaddresses.yaml
+#- patches/webhook_in_activemqartemisscaledowns.yaml
+#- patches/webhook_in_activemqartemissecurities.yaml
 #- patches/webhook_in_activemqartemissecurities.yaml
 #- patches/webhook_in_activemqartemisaddresses.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
@@ -27,31 +27,31 @@ patchesStrategicMerge:
 #- patches/cainjection_in_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
-patchesJson6902:
-- target:
-    group: "apiextensions.k8s.io" 
-    version: v1 # apiVersion
-    kind: CustomResourceDefinition
-    name: activemqartemises.broker.amq.io
-  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
-- target:
-    group: "apiextensions.k8s.io" 
-    version: v1 # apiVersion
-    kind: CustomResourceDefinition
-    name: activemqartemisaddresses.broker.amq.io
-  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
-- target:
-    group: "apiextensions.k8s.io" 
-    version: v1 # apiVersion
-    kind: CustomResourceDefinition
-    name: activemqartemisscaledowns.broker.amq.io
-  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
-- target:
-    group: "apiextensions.k8s.io" 
-    version: v1 # apiVersion
-    kind: CustomResourceDefinition
-    name: activemqartemissecurities.broker.amq.io
-  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
+#patchesJson6902:
+#- target:
+#    group: "apiextensions.k8s.io"
+#    version: v1 # apiVersion
+#    kind: CustomResourceDefinition
+#    name: activemqartemises.broker.amq.io
+#  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
+#- target:
+#    group: "apiextensions.k8s.io"
+#    version: v1 # apiVersion
+#    kind: CustomResourceDefinition
+#    name: activemqartemisaddresses.broker.amq.io
+#  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
+#- target:
+#    group: "apiextensions.k8s.io"
+#    version: v1 # apiVersion
+#    kind: CustomResourceDefinition
+#    name: activemqartemisscaledowns.broker.amq.io
+#  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
+#- target:
+#    group: "apiextensions.k8s.io"
+#    version: v1 # apiVersion
+#    kind: CustomResourceDefinition
+#    name: activemqartemissecurities.broker.amq.io
+#  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
