use a list in place of map for broker properties to respect order

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -431,9 +431,11 @@ spec:
                   will be generated.
                 type: string
               brokerProperties:
-                additionalProperties:
+                description: Optional list of key=value properties that are applied
+                  to the broker configuration bean.
+                items:
                   type: string
-                type: object
+                type: array
               connectors:
                 items:
                   properties:
