--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -335,9 +335,10 @@ spec:
                 description: User name for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
                 type: string
               brokerProperties:
-                additionalProperties:
+                description: Optional list of key=value properties that are applied to the broker configuration bean.
+                items:
                   type: string
-                type: object
+                type: array
               connectors:
                 items:
                   properties:
