Added acceptor and connector options for store type and provider.

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -64,6 +64,14 @@ spec:
                     expose:
                       description: Whether or not to expose this acceptor
                       type: boolean
+                    keyStoreProvider:
+                      description: Provider used for the keystore; "SUN", "SunJCE",
+                        etc. Default is null
+                      type: string
+                    keyStoreType:
+                      description: Type of keystore being used; "JKS", "JCEKS", "PKCS12",
+                        etc. Default is "JKS"
+                      type: string
                     multicastPrefix:
                       description: To indicate which kind of routing type to use
                       type: string
@@ -104,6 +112,14 @@ spec:
                       description: If prevents advisory addresses/queues to be registered
                         to management service, default false
                       type: boolean
+                    trustStoreProvider:
+                      description: Provider used for the truststore; "SUN", "SunJCE",
+                        etc. Default in broker is null
+                      type: string
+                    trustStoreType:
+                      description: Type of truststore being used; "JKS", "JCEKS",
+                        "PKCS12", etc. Default in broker is "JKS"
+                      type: string
                     verifyHost:
                       description: The CN of the connecting client's SSL certificate
                         will be compared to its hostname to verify they match. This
@@ -453,6 +469,14 @@ spec:
                     host:
                       description: Hostname or IP to connect to
                       type: string
+                    keyStoreProvider:
+                      description: Provider used for the keystore; "SUN", "SunJCE",
+                        etc. Default is null
+                      type: string
+                    keyStoreType:
+                      description: Type of keystore being used; "JKS", "JCEKS", "PKCS12",
+                        etc. Default is "JKS"
+                      type: string
                     name:
                       description: The name of the connector
                       type: string
@@ -479,6 +503,14 @@ spec:
                       type: string
                     sslSecret:
                       description: Name of the secret to use for ssl information
+                      type: string
+                    trustStoreProvider:
+                      description: Provider used for the truststore; "SUN", "SunJCE",
+                        etc. Default in broker is null
+                      type: string
+                    trustStoreType:
+                      description: Type of truststore being used; "JKS", "JCEKS",
+                        "PKCS12", etc. Default in broker is "JKS"
                       type: string
                     type:
                       description: The type either tcp or vm
