--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -65,6 +65,10 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.10
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2200
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.12
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_100
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.12
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_101
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.1
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -73,6 +77,10 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.7
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2200
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.9
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_100
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.9
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_101
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.1
         - name: ENABLE_WEBHOOKS
           value: "false"
         image: controller:latest
