--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -53,6 +53,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.1
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_102
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.2
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_103
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.3
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -67,9 +69,11 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.1
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_102
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.2
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_103
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.3
         - name: ENABLE_WEBHOOKS
           value: "false"
-        image: quay.io/artemiscloud/activemq-artemis-operator:1.0.2
+        image: quay.io/artemiscloud/activemq-artemis-operator:dev.latest
         livenessProbe:
           httpGet:
             path: /healthz
