--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -54,6 +54,8 @@ spec:
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_102
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.2
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_103
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.5
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_104
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.6
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
@@ -70,10 +72,12 @@ spec:
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_102
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.2
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_103
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.5
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_104
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.6
         - name: ENABLE_WEBHOOKS
           value: "false"
-        image: quay.io/artemiscloud/activemq-artemis-operator:1.0.3
+        image: quay.io/artemiscloud/activemq-artemis-operator:1.0.4
         livenessProbe:
           httpGet:
             path: /healthz
