--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -57,6 +57,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_104
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.6
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_107
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.7
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -75,6 +77,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_104
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.6
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_107
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.7
         - name: ENABLE_WEBHOOKS
           value: "false"
         image: quay.io/artemiscloud/activemq-artemis-operator:1.0.4
