Add broker images for ActiveMQ Artemis 2.25.0

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -53,6 +53,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2230
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.7
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2250
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.8
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -67,6 +69,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2230
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.7
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2250
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.8
         - name: ENABLE_WEBHOOKS
           value: "false"
         image: quay.io/artemiscloud/activemq-artemis-operator:1.0.6
