--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -71,6 +71,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2230
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.7
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2250
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.8
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -85,6 +87,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.5
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2230
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.7
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2250
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.8
         - name: ENABLE_WEBHOOKS
           value: "false"
         image: controller:latest
