--- a/Dockerfile_debug
+++ b/Dockerfile_debug
@@ -4,6 +4,7 @@ FROM golang:1.16 as builder
 ENV GOOS=linux
 ENV CGO_ENABLED=0
 ENV BROKER_NAME=activemq-artemis
+ENV GO_MODULE=github.com/artemiscloud/activemq-artemis-operator
 
 RUN go get github.com/go-delve/delve/cmd/dlv
 RUN mkdir -p /tmp/activemq-artemis-operator
@@ -17,6 +18,7 @@ COPY go.sum go.sum
 RUN go mod download
 
 # Copy the go source
+COPY .git/ .git/
 COPY main.go main.go
 COPY api/ api/
 COPY controllers/ controllers/
@@ -25,7 +27,12 @@ COPY version/ version/
 COPY entrypoint/ entrypoint/
 
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -gcflags \"all=-N\" -v -o /tmp/activemq-artemis-operator/${BROKER_NAME}-operator main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -gcflags "all=-N" -v \
+    -ldflags="-X '${GO_MODULE}/version.CommitHash=`git rev-parse --short HEAD`' \
+    -X '${GO_MODULE}/version.BuildTimestamp=`date '+%Y-%m-%dT%H:%M:%S'`'" \
+    -o /tmp/activemq-artemis-operator/${BROKER_NAME}-operator main.go
+
+
 
 FROM registry.access.redhat.com/ubi8:8.6-855 AS base-env
 
