[#313] Operator logs timestamp that is not human readable

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -39,6 +39,7 @@ spec:
         # If running entrypoint_debug then use '-- --zap-level debug'
         - --zap-log-level=debug
         - --zap-encoder=console
+        - --zap-time-encoding=iso8601
         - --leader-elect
         env:
         - name: OPERATOR_NAME
