[#325] Change permissions to namespaced
OLM automatically creates a cluster role with the permissions when it is
required by the install mode.
https://sdk.operatorframework.io/docs/building-operators/golang/operator-scope/#changing-the-permissions-to-namespaced

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,9 +1,10 @@
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: activemq-artemis-operator
+  name: operator-role
+  namespace: activemq-artemis-operator
 rules:
 - apiGroups:
   - ""
