--- a/bundle/manifests/activemq-artemis-operator-rolebinding_rbac.authorization.k8s.io_v1_rolebinding.yaml
+++ b/bundle/manifests/activemq-artemis-operator-rolebinding_rbac.authorization.k8s.io_v1_rolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: operator-rolebinding
+  name: activemq-artemis-operator-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: activemq-artemis-operator
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: activemq-artemis-controller-manager
+  namespace: activemq-artemis-operator
