[#329] deprecate Upgrades, ensure Version is respected when specified, independent of Upgrades, fix up test-mk-do target

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -2142,7 +2142,8 @@ spec:
                   type: object
                 type: array
               upgrades:
-                description: ActiveMQArtemis App product upgrade flags
+                description: ActiveMQArtemis App product upgrade flags, this is deprecated
+                  in v1beta1, specifying the Version is sufficient
                 properties:
                   enabled:
                     description: Set to true to enable automatic micro version product
