Add a step to check doc.crds.dev to the release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Check doc.crds.dev
+        run: for i in {1..30}; do curl "https://doc.crds.dev/github.com/${{ github.repository }}@${{ github.ref_name }}" | grep 'ActiveMQArtemis' && break; sleep 1; done
+
       - name: Checkout artemiscloud.github.io
         uses: actions/checkout@v3
         with:
