--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -1450,7 +1450,8 @@ spec:
                   labels:
                     additionalProperties:
                       type: string
-                    description: custom labels provided in the cr
+                    description: Assign labels to a broker pod, the keys `ActiveMQArtemis`
+                      and `application` are not allowed
                     type: object
                   livenessProbe:
                     description: Probe describes a health check to be performed against
