--- a/deploy/crds/broker_activemqartemissecurity_crd.yaml
+++ b/deploy/crds/broker_activemqartemissecurity_crd.yaml
@@ -561,6 +561,67 @@ spec:
                           type: array
                       type: object
                     type: array
+                  ldapLoginModules:
+                    items:
+                      properties:
+                        name:
+                          type: string
+                        initialContextFactory:
+                          type: string
+                        connectionURL:
+                          type: string
+                        authentication:
+                          type: string
+                        connectionUsername:
+                          type: string
+                        connectionPassword:
+                          type: string
+                        saslLoginConfigScope:
+                          type: string
+                        connectionProtocol:
+                          type: string
+                        connectionPool:
+                          type: boolean
+                        connectionTimeout:
+                          format: int64
+                          type: integer
+                        readTimeout:
+                          format: int64
+                          type: integer
+                        userBase:
+                          type: string
+                        userSearchMatching:
+                          type: string
+                        userSearchSubtree:
+                          type: boolean
+                        userRoleName:
+                          type: string
+                        roleBase:
+                          type: string
+                        roleName:
+                          type: string
+                        roleSearchMatching:
+                          type: string
+                        roleSearchSubtree:
+                          type: boolean
+                        authenticateUser:
+                          type: boolean
+                        referral:
+                          type: string
+                        ignorePartialResultException:
+                          type: boolean
+                        expandRoles:
+                          type: boolean
+                        expandRolesMatching:
+                          type: string
+                      required:
+                      - connectionURL
+                      - userBase
+                      - userSearchMatching
+                      - roleBase
+                      - roleSearchMatching
+                      type: object
+                    type: array
                 type: object
               securityDomains:
                 properties:
